--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="container" style="display: none;" id="main">
         <p id="ques"> here ques</p>
         <p id="res"></p>
+        <button class="btn btn-info" id="undo" value="undo" onclick="undo()" name="undo">Undo</button>
         <button class="btn btn-info" id="ans1" value="yes" onclick="vishalyes()" name="yes">yes</button>
         <button class="btn btn-info" id="ans2" value="no" onclick="vishalNo()" name="No">No</button>
         <button class="btn btn-info" id="ans3" value="next" onclick="next()" name="Next"
