--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
     </div>
 
     <div class="container">
-        <textarea rows="10" cols="40" placeholder="Enter Text" id="input"></textarea>
-        <br />
-        <button class="btn btn-info" onclick="input()">Submit</button>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <textarea rows="10" cols="40" placeholder="Enter Text" id="input"></textarea>
+                <br />
+                <button class="btn btn-info" onclick="input()">Submit</button>
+            </div>
+            <div class="col-lg-6">
+                <ul id="log">Logs</ul>
+            </div>
+        </div>
     </div>
 
 
@@ -36,11 +44,13 @@
     </br>
 
     <div class="container" style="display: none;" id="main">
+
         <p id="ques"> here ques</p>
         <p id="res"></p>
-        <button class="btn btn-info" id="undo" value="undo" onclick="undo()" name="undo">Undo</button>
+        <button class="btn btn-info" id="notSure" value="NotSure" onclick="notSure()" name="notSure">notSure</button>
         <button class="btn btn-info" id="ans1" value="yes" onclick="vishalyes()" name="yes">yes</button>
         <button class="btn btn-info" id="ans2" value="no" onclick="vishalNo()" name="No">No</button>
+        <button class="btn btn-info" id="undo" value="undo" onclick="undo()" name="undo">Undo</button>
         <button class="btn btn-info" id="ans3" value="next" onclick="next()" name="Next"
             style="display: none;">Next</button>
 
