--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div style="text-align: center;" class="jumbotron">
         <h3>Response Based Question App</h3>
-        <h4>Note : 4 White Spaces is 1 indentation</h4>
+        <h4>Note : 2 Hyphen is 1 indentation</h4>
     </div>
 
     <div class="container">
