--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
     </br>
     </br>
 
-    <div class="container" style="display: none;" id="main">
+    <div class="container" id="main">
 
-        <p id="ques"> here ques</p>
-        <p id="res"></p>
-        <button class="btn btn-info" id="notSure" value="NotSure" onclick="notSure()" name="notSure">notSure</button>
-        <button class="btn btn-info" id="ans1" value="yes" onclick="vishalyes()" name="yes">yes</button>
-        <button class="btn btn-info" id="ans2" value="no" onclick="vishalNo()" name="No">No</button>
-        <button class="btn btn-info" id="undo" value="undo" onclick="undo()" name="undo">Undo</button>
+        <p id="ques"> </p>
+        <div id="res"></div>
+        <!-- <button class="btn btn-info" id="notSure" value=0 onclick="notSure()" name="notSure">notSure</button> -->
+        <!-- <button class="btn btn-info" id="ans1" value="yes" onclick="vishalyes()" name="yes">yes</button>
+        <button class="btn btn-info" id="ans2" value="no" onclick="vishalNo()" name="No">No</button> -->
+
+        <button class="btn btn-info" id="undo" value="undo" onclick="undo()" name="undo"
+            style="display: none;">Undo</button>
         <button class="btn btn-info" id="ans3" value="next" onclick="next()" name="Next"
             style="display: none;">Next</button>
 
