--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="card">
         <div class="container">
             <textarea rows="20" cols="140" placeholder="Either select a .txt file from your system or enter Text"
-                id="input" style="margin-top: 20px;"></textarea>
+                id="input" style="margin-top: 20px;overflow-y: scroll;"></textarea>
             <input class="btn btn-primary" type="file">
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
