--- a/tree.html
+++ b/tree.html
@@ -15,11 +15,11 @@
 
         #d1 {
             overflow-x: hidden;
-            overflow-y: scroll;
+            overflow-y: auto;
             margin-left: auto;
             margin-right: auto;
-            width: 185px;
-            margin-bottom: 20px;
+            width: 225px;
+            padding-bottom: 25px;
             height: 100px;
         }
 
